fixed spacing in page links

--- a/websitestyle.css
+++ b/websitestyle.css
@@ -18,6 +18,7 @@ img.researchimg{float:left;max-width:20%;max-height:100%; padding-right: 10px;}
 img.blogimg{float:center;max-width:20%;max-height:100%; padding-right: 10px;}
 * {box-sizing: border-box;}
 .column {float: left; padding: 20px;}
+.row1 {margin-top: -20px;}
 .columntest {float: left; padding: 0px; display:block;}
 .middletest {width: 50%}
 .left {width: 25%;}
